@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2013 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,35 +17,45 @@
 package org.springframework.jms.support.converter;
 
 import java.io.ByteArrayInputStream;
+import java.lang.reflect.Method;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
-import javax.jms.BytesMessage;
-import javax.jms.Session;
-import javax.jms.TextMessage;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.mockito.invocation.InvocationOnMock;
+import com.fasterxml.jackson.annotation.JsonView;
+import jakarta.jms.BytesMessage;
+import jakarta.jms.JMSException;
+import jakarta.jms.Session;
+import jakarta.jms.TextMessage;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.stubbing.Answer;
 
-import static org.junit.Assert.*;
-import static org.mockito.BDDMockito.*;
+import org.springframework.core.MethodParameter;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.isA;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 
 /**
  * @author Arjen Poutsma
  * @author Dave Syer
+ * @author Stephane Nicoll
  */
-public class MappingJackson2MessageConverterTests {
+class MappingJackson2MessageConverterTests {
 
 	private MappingJackson2MessageConverter converter;
 
 	private Session sessionMock;
 
 
-	@Before
-	public void setUp() throws Exception {
+	@BeforeEach
+	public void setup() {
 		sessionMock = mock(Session.class);
 		converter = new MappingJackson2MessageConverter();
 		converter.setEncodingPropertyName("__encoding__");
@@ -54,7 +64,7 @@ public class MappingJackson2MessageConverterTests {
 
 
 	@Test
-	public void toBytesMessage() throws Exception {
+	void toBytesMessage() throws Exception {
 		BytesMessage bytesMessageMock = mock(BytesMessage.class);
 		Date toBeMarshalled = new Date();
 
@@ -68,7 +78,7 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void fromBytesMessage() throws Exception {
+	void fromBytesMessage() throws Exception {
 		BytesMessage bytesMessageMock = mock(BytesMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
@@ -77,21 +87,16 @@ public class MappingJackson2MessageConverterTests {
 
 		given(bytesMessageMock.getStringProperty("__typeid__")).willReturn(Object.class.getName());
 		given(bytesMessageMock.propertyExists("__encoding__")).willReturn(false);
-		given(bytesMessageMock.getBodyLength()).willReturn(new Long(bytes.length));
+		given(bytesMessageMock.getBodyLength()).willReturn(Long.valueOf(bytes.length));
 		given(bytesMessageMock.readBytes(any(byte[].class))).willAnswer(
-				new Answer<Integer>() {
-					@Override
-					public Integer answer(InvocationOnMock invocation) throws Throwable {
-						return byteStream.read((byte[]) invocation.getArguments()[0]);
-					}
-				});
+				(Answer<Integer>) invocation -> byteStream.read((byte[]) invocation.getArguments()[0]));
 
 		Object result = converter.fromMessage(bytesMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void toTextMessageWithObject() throws Exception {
+	void toTextMessageWithObject() throws Exception {
 		converter.setTargetType(MessageType.TEXT);
 		TextMessage textMessageMock = mock(TextMessage.class);
 		Date toBeMarshalled = new Date();
@@ -103,10 +108,10 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void toTextMessageWithMap() throws Exception {
+	void toTextMessageWithMap() throws Exception {
 		converter.setTargetType(MessageType.TEXT);
 		TextMessage textMessageMock = mock(TextMessage.class);
-		Map<String, String> toBeMarshalled = new HashMap<String, String>();
+		Map<String, String> toBeMarshalled = new HashMap<>();
 		toBeMarshalled.put("foo", "bar");
 
 		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
@@ -116,7 +121,7 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void fromTextMessage() throws Exception {
+	void fromTextMessage() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		MyBean unmarshalled = new MyBean("bar");
 
@@ -125,11 +130,11 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		MyBean result = (MyBean)converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void fromTextMessageWithUnknownProperty() throws Exception {
+	void fromTextMessageWithUnknownProperty() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		MyBean unmarshalled = new MyBean("bar");
 
@@ -138,11 +143,11 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		MyBean result = (MyBean)converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void fromTextMessageAsObject() throws Exception {
+	void fromTextMessageAsObject() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
@@ -151,11 +156,11 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		Object result = converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void fromTextMessageAsMap() throws Exception {
+	void fromTextMessageAsMap() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
@@ -164,10 +169,98 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		Object result = converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
+	@Test
+	void toTextMessageWithReturnType() throws JMSException, NoSuchMethodException {
+		Method method = this.getClass().getDeclaredMethod("summary");
+		MethodParameter returnType = new MethodParameter(method, -1);
+		testToTextMessageWithReturnType(returnType);
+		verify(sessionMock).createTextMessage("{\"name\":\"test\"}");
+	}
+
+	@Test
+	void toTextMessageWithNullReturnType() throws JMSException, NoSuchMethodException {
+		testToTextMessageWithReturnType(null);
+		verify(sessionMock).createTextMessage("{\"name\":\"test\",\"description\":\"lengthy description\"}");
+	}
+
+	@Test
+	void toTextMessageWithReturnTypeAndNoJsonView() throws JMSException, NoSuchMethodException {
+		Method method = this.getClass().getDeclaredMethod("none");
+		MethodParameter returnType = new MethodParameter(method, -1);
+
+		testToTextMessageWithReturnType(returnType);
+		verify(sessionMock).createTextMessage("{\"name\":\"test\",\"description\":\"lengthy description\"}");
+	}
+
+	@Test
+	void toTextMessageWithReturnTypeAndMultipleJsonViews() throws JMSException, NoSuchMethodException {
+		Method method = this.getClass().getDeclaredMethod("invalid");
+		MethodParameter returnType = new MethodParameter(method, -1);
+
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				testToTextMessageWithReturnType(returnType));
+	}
+
+	private void testToTextMessageWithReturnType(MethodParameter returnType) throws JMSException, NoSuchMethodException {
+		converter.setTargetType(MessageType.TEXT);
+		TextMessage textMessageMock = mock(TextMessage.class);
+
+		MyAnotherBean bean = new MyAnotherBean("test", "lengthy description");
+		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
+		converter.toMessage(bean, sessionMock, returnType);
+		verify(textMessageMock).setStringProperty("__typeid__", MyAnotherBean.class.getName());
+	}
+
+	@Test
+	void toTextMessageWithJsonViewClass() throws JMSException {
+		converter.setTargetType(MessageType.TEXT);
+		TextMessage textMessageMock = mock(TextMessage.class);
+
+		MyAnotherBean bean = new MyAnotherBean("test", "lengthy description");
+		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
+
+
+		converter.toMessage(bean, sessionMock, Summary.class);
+		verify(textMessageMock).setStringProperty("__typeid__", MyAnotherBean.class.getName());
+		verify(sessionMock).createTextMessage("{\"name\":\"test\"}");
+	}
+
+	@Test
+	void toTextMessageWithAnotherJsonViewClass() throws JMSException {
+		converter.setTargetType(MessageType.TEXT);
+		TextMessage textMessageMock = mock(TextMessage.class);
+
+		MyAnotherBean bean = new MyAnotherBean("test", "lengthy description");
+		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
+
+
+		converter.toMessage(bean, sessionMock, Full.class);
+		verify(textMessageMock).setStringProperty("__typeid__", MyAnotherBean.class.getName());
+		verify(sessionMock).createTextMessage("{\"name\":\"test\",\"description\":\"lengthy description\"}");
+	}
+
+
+	@JsonView(Summary.class)
+	public MyAnotherBean summary() {
+		return new MyAnotherBean();
+	}
+
+	public MyAnotherBean none() {
+		return new MyAnotherBean();
+	}
+
+	@JsonView({Summary.class, Full.class})
+	public MyAnotherBean invalid() {
+		return new MyAnotherBean();
+	}
+
+
 	public static class MyBean {
+
+		private String foo;
 
 		public MyBean() {
 		}
@@ -175,8 +268,6 @@ public class MappingJackson2MessageConverterTests {
 		public MyBean(String foo) {
 			this.foo = foo;
 		}
-
-		private String foo;
 
 		public String getFoo() {
 			return foo;
@@ -194,19 +285,56 @@ public class MappingJackson2MessageConverterTests {
 			if (o == null || getClass() != o.getClass()) {
 				return false;
 			}
-
 			MyBean bean = (MyBean) o;
-
 			if (foo != null ? !foo.equals(bean.foo) : bean.foo != null) {
 				return false;
 			}
-
 			return true;
 		}
 
 		@Override
 		public int hashCode() {
 			return foo != null ? foo.hashCode() : 0;
+		}
+	}
+
+
+	private interface Summary {}
+
+	private interface Full extends Summary {}
+
+
+	@SuppressWarnings("unused")
+	private static class MyAnotherBean {
+
+		@JsonView(Summary.class)
+		private String name;
+
+		@JsonView(Full.class)
+		private String description;
+
+		private MyAnotherBean() {
+		}
+
+		public MyAnotherBean(String name, String description) {
+			this.name = name;
+			this.description = description;
+		}
+
+		public String getName() {
+			return name;
+		}
+
+		public void setName(String name) {
+			this.name = name;
+		}
+
+		public String getDescription() {
+			return description;
+		}
+
+		public void setDescription(String description) {
+			this.description = description;
 		}
 	}
 
