@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2015 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -22,7 +22,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.StringReader;
-import java.io.UnsupportedEncodingException;
 import java.lang.reflect.GenericArrayType;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
@@ -32,30 +31,20 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.Map;
 import java.util.UUID;
-import javax.activation.DataHandler;
-import javax.activation.DataSource;
+
 import javax.xml.XMLConstants;
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBElement;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.MarshalException;
-import javax.xml.bind.Marshaller;
-import javax.xml.bind.UnmarshalException;
-import javax.xml.bind.Unmarshaller;
-import javax.xml.bind.ValidationEventHandler;
-import javax.xml.bind.ValidationException;
-import javax.xml.bind.annotation.XmlRootElement;
-import javax.xml.bind.annotation.adapters.XmlAdapter;
-import javax.xml.bind.attachment.AttachmentMarshaller;
-import javax.xml.bind.attachment.AttachmentUnmarshaller;
 import javax.xml.datatype.Duration;
 import javax.xml.datatype.XMLGregorianCalendar;
 import javax.xml.namespace.QName;
+import javax.xml.parsers.ParserConfigurationException;
+import javax.xml.parsers.SAXParser;
+import javax.xml.parsers.SAXParserFactory;
 import javax.xml.stream.XMLEventReader;
 import javax.xml.stream.XMLEventWriter;
 import javax.xml.stream.XMLStreamReader;
@@ -69,6 +58,21 @@ import javax.xml.transform.stream.StreamSource;
 import javax.xml.validation.Schema;
 import javax.xml.validation.SchemaFactory;
 
+import jakarta.activation.DataHandler;
+import jakarta.activation.DataSource;
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBElement;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.MarshalException;
+import jakarta.xml.bind.Marshaller;
+import jakarta.xml.bind.UnmarshalException;
+import jakarta.xml.bind.Unmarshaller;
+import jakarta.xml.bind.ValidationEventHandler;
+import jakarta.xml.bind.ValidationException;
+import jakarta.xml.bind.annotation.XmlRootElement;
+import jakarta.xml.bind.annotation.adapters.XmlAdapter;
+import jakarta.xml.bind.attachment.AttachmentMarshaller;
+import jakarta.xml.bind.attachment.AttachmentUnmarshaller;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.w3c.dom.ls.LSResourceResolver;
@@ -76,12 +80,12 @@ import org.xml.sax.EntityResolver;
 import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
 import org.xml.sax.XMLReader;
-import org.xml.sax.helpers.XMLReaderFactory;
 
 import org.springframework.beans.factory.BeanClassLoaderAware;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.core.annotation.AnnotationUtils;
 import org.springframework.core.io.Resource;
+import org.springframework.lang.Nullable;
 import org.springframework.oxm.GenericMarshaller;
 import org.springframework.oxm.GenericUnmarshaller;
 import org.springframework.oxm.MarshallingFailureException;
@@ -97,12 +101,12 @@ import org.springframework.util.Assert;
 import org.springframework.util.ClassUtils;
 import org.springframework.util.FileCopyUtils;
 import org.springframework.util.ObjectUtils;
+import org.springframework.util.ResourceUtils;
 import org.springframework.util.StringUtils;
 import org.springframework.util.xml.StaxUtils;
 
 /**
- * Implementation of the {@code GenericMarshaller} interface for JAXB 2.1/2.2,
- * as included in JDK 6 update 4+ and Java 7/8.
+ * Implementation of the {@code GenericMarshaller} interface for JAXB 2.2.
  *
  * <p>The typical usage will be to set either the "contextPath" or the "classesToBeBound"
  * property on this bean, possibly customize the marshaller and unmarshaller by setting
@@ -111,51 +115,67 @@ import org.springframework.util.xml.StaxUtils;
  * @author Arjen Poutsma
  * @author Juergen Hoeller
  * @author Rossen Stoyanchev
+ * @author Sam Brannen
  * @since 3.0
- * @see #setContextPath(String)
- * @see #setClassesToBeBound(Class[])
- * @see #setJaxbContextProperties(Map)
- * @see #setMarshallerProperties(Map)
- * @see #setUnmarshallerProperties(Map)
- * @see #setSchema(Resource)
- * @see #setSchemas(Resource[])
- * @see #setMarshallerListener(javax.xml.bind.Marshaller.Listener)
- * @see #setUnmarshallerListener(javax.xml.bind.Unmarshaller.Listener)
- * @see #setAdapters(XmlAdapter[])
+ * @see #setContextPath
+ * @see #setClassesToBeBound
+ * @see #setJaxbContextProperties
+ * @see #setMarshallerProperties
+ * @see #setUnmarshallerProperties
+ * @see #setSchema
+ * @see #setSchemas
+ * @see #setMarshallerListener
+ * @see #setUnmarshallerListener
+ * @see #setAdapters
  */
 public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, GenericMarshaller, GenericUnmarshaller,
 		BeanClassLoaderAware, InitializingBean {
 
 	private static final String CID = "cid:";
 
+	private static final EntityResolver NO_OP_ENTITY_RESOLVER =
+			(publicId, systemId) -> new InputSource(new StringReader(""));
 
-	/** Logger available to subclasses */
+
+	/** Logger available to subclasses. */
 	protected final Log logger = LogFactory.getLog(getClass());
 
+	@Nullable
 	private String contextPath;
 
+	@Nullable
 	private Class<?>[] classesToBeBound;
 
+	@Nullable
 	private String[] packagesToScan;
 
+	@Nullable
 	private Map<String, ?> jaxbContextProperties;
 
+	@Nullable
 	private Map<String, ?> marshallerProperties;
 
+	@Nullable
 	private Map<String, ?> unmarshallerProperties;
 
+	@Nullable
 	private Marshaller.Listener marshallerListener;
 
+	@Nullable
 	private Unmarshaller.Listener unmarshallerListener;
 
+	@Nullable
 	private ValidationEventHandler validationEventHandler;
 
+	@Nullable
 	private XmlAdapter<?, ?>[] adapters;
 
+	@Nullable
 	private Resource[] schemaResources;
 
 	private String schemaLanguage = XMLConstants.W3C_XML_SCHEMA_NS_URI;
 
+	@Nullable
 	private LSResourceResolver schemaResourceResolver;
 
 	private boolean lazyInit = false;
@@ -166,14 +186,18 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 
 	private boolean checkForXmlRootElement = true;
 
+	@Nullable
 	private Class<?> mappedClass;
 
+	@Nullable
 	private ClassLoader beanClassLoader;
 
 	private final Object jaxbContextMonitor = new Object();
 
+	@Nullable
 	private volatile JAXBContext jaxbContext;
 
+	@Nullable
 	private Schema schema;
 
 	private boolean supportDtd = false;
@@ -195,14 +219,14 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	 * <p>Setting either this property, {@link #setClassesToBeBound "classesToBeBound"}
 	 * or {@link #setPackagesToScan "packagesToScan"} is required.
 	 */
-	public void setContextPath(String contextPath) {
-		Assert.hasText(contextPath, "'contextPath' must not be null");
+	public void setContextPath(@Nullable String contextPath) {
 		this.contextPath = contextPath;
 	}
 
 	/**
 	 * Return the JAXB context path.
 	 */
+	@Nullable
 	public String getContextPath() {
 		return this.contextPath;
 	}
@@ -212,14 +236,14 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	 * <p>Setting either this property, {@link #setContextPath "contextPath"}
 	 * or {@link #setPackagesToScan "packagesToScan"} is required.
 	 */
-	public void setClassesToBeBound(Class<?>... classesToBeBound) {
-		Assert.notEmpty(classesToBeBound, "'classesToBeBound' must not be empty");
+	public void setClassesToBeBound(@Nullable Class<?>... classesToBeBound) {
 		this.classesToBeBound = classesToBeBound;
 	}
 
 	/**
 	 * Return the list of Java classes to be recognized by a newly created JAXBContext.
 	 */
+	@Nullable
 	public Class<?>[] getClassesToBeBound() {
 		return this.classesToBeBound;
 	}
@@ -228,16 +252,17 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	 * Set the packages to search for classes with JAXB2 annotations in the classpath.
 	 * This is using a Spring-bases search and therefore analogous to Spring's component-scan
 	 * feature ({@link org.springframework.context.annotation.ClassPathBeanDefinitionScanner}).
-	 * <p>Setting either this property, {@link #setContextPath "contextPath"}
-	 * or {@link #setClassesToBeBound "classesToBeBound"} is required.
+	 * <p>Setting either this property, {@link #setContextPath "contextPath"} or
+	 * {@link #setClassesToBeBound "classesToBeBound"} is required.
 	 */
-	public void setPackagesToScan(String... packagesToScan) {
+	public void setPackagesToScan(@Nullable String... packagesToScan) {
 		this.packagesToScan = packagesToScan;
 	}
 
 	/**
 	 * Return the packages to search for JAXB2 annotations.
 	 */
+	@Nullable
 	public String[] getPackagesToScan() {
 		return this.packagesToScan;
 	}
@@ -251,24 +276,25 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	}
 
 	/**
-	 * Set the JAXB {@code Marshaller} properties. These properties will be set on the
-	 * underlying JAXB {@code Marshaller}, and allow for features such as indentation.
+	 * Set the JAXB {@code Marshaller} properties.
+	 * <p>These properties will be set on the underlying JAXB {@code Marshaller},
+	 * and allow for features such as indentation.
 	 * @param properties the properties
-	 * @see javax.xml.bind.Marshaller#setProperty(String, Object)
-	 * @see javax.xml.bind.Marshaller#JAXB_ENCODING
-	 * @see javax.xml.bind.Marshaller#JAXB_FORMATTED_OUTPUT
-	 * @see javax.xml.bind.Marshaller#JAXB_NO_NAMESPACE_SCHEMA_LOCATION
-	 * @see javax.xml.bind.Marshaller#JAXB_SCHEMA_LOCATION
+	 * @see jakarta.xml.bind.Marshaller#setProperty(String, Object)
+	 * @see jakarta.xml.bind.Marshaller#JAXB_ENCODING
+	 * @see jakarta.xml.bind.Marshaller#JAXB_FORMATTED_OUTPUT
+	 * @see jakarta.xml.bind.Marshaller#JAXB_NO_NAMESPACE_SCHEMA_LOCATION
+	 * @see jakarta.xml.bind.Marshaller#JAXB_SCHEMA_LOCATION
 	 */
 	public void setMarshallerProperties(Map<String, ?> properties) {
 		this.marshallerProperties = properties;
 	}
 
 	/**
-	 * Set the JAXB {@code Unmarshaller} properties. These properties will be set on the
-	 * underlying JAXB {@code Unmarshaller}.
+	 * Set the JAXB {@code Unmarshaller} properties.
+	 * <p>These properties will be set on the underlying JAXB {@code Unmarshaller}.
 	 * @param properties the properties
-	 * @see javax.xml.bind.Unmarshaller#setProperty(String, Object)
+	 * @see jakarta.xml.bind.Unmarshaller#setProperty(String, Object)
 	 */
 	public void setUnmarshallerProperties(Map<String, ?> properties) {
 		this.unmarshallerProperties = properties;
@@ -298,7 +324,7 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 
 	/**
 	 * Specify the {@code XmlAdapter}s to be registered with the JAXB {@code Marshaller}
-	 * and {@code Unmarshaller}
+	 * and {@code Unmarshaller}.
 	 */
 	public void setAdapters(XmlAdapter<?, ?>... adapters) {
 		this.adapters = adapters;
@@ -319,7 +345,8 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	}
 
 	/**
-	 * Set the schema language. Default is the W3C XML Schema: {@code http://www.w3.org/2001/XMLSchema"}.
+	 * Set the schema language.
+	 * Default is the W3C XML Schema: {@code http://www.w3.org/2001/XMLSchema"}.
 	 * @see XMLConstants#W3C_XML_SCHEMA_NS_URI
 	 * @see XMLConstants#RELAXNG_NS_URI
 	 */
@@ -330,8 +357,8 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	/**
 	 * Set the resource resolver, as used to load the schema resources.
 	 * @see SchemaFactory#setResourceResolver(org.w3c.dom.ls.LSResourceResolver)
-	 * @see #setSchema(Resource)
-	 * @see #setSchemas(Resource[])
+	 * @see #setSchema
+	 * @see #setSchemas
 	 */
 	public void setSchemaResourceResolver(LSResourceResolver schemaResourceResolver) {
 		this.schemaResourceResolver = schemaResourceResolver;
@@ -355,10 +382,11 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	}
 
 	/**
-	 * Specify whether the {@link #supports(Class)} returns {@code true} for the {@link JAXBElement} class.
-	 * <p>Default is {@code false}, meaning that {@code supports(Class)} always returns {@code false} for
-	 * {@code JAXBElement} classes (though {@link #supports(Type)} can return {@code true}, since it can
-	 * obtain the type parameters of {@code JAXBElement}).
+	 * Specify whether the {@link #supports(Class)} returns {@code true} for the
+	 * {@link JAXBElement} class.
+	 * <p>Default is {@code false}, meaning that {@code supports(Class)} always returns
+	 * {@code false} for {@code JAXBElement} classes (though {@link #supports(Type)} can
+	 * return {@code true}, since it can obtain the type parameters of {@code JAXBElement}).
 	 * <p>This property is typically enabled in combination with usage of classes like
 	 * {@link org.springframework.web.servlet.view.xml.MarshallingView MarshallingView},
 	 * since the {@code ModelAndView} does not offer type parameter information at runtime.
@@ -386,14 +414,14 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 
 	/**
 	 * Specify a JAXB mapped class for partial unmarshalling.
-	 * @see javax.xml.bind.Unmarshaller#unmarshal(javax.xml.transform.Source, Class)
+	 * @see jakarta.xml.bind.Unmarshaller#unmarshal(javax.xml.transform.Source, Class)
 	 */
 	public void setMappedClass(Class<?> mappedClass) {
 		this.mappedClass = mappedClass;
 	}
 
 	/**
-	 * Indicates whether DTD parsing should be supported.
+	 * Indicate whether DTD parsing should be supported.
 	 * <p>Default is {@code false} meaning that DTD is disabled.
 	 */
 	public void setSupportDtd(boolean supportDtd) {
@@ -401,31 +429,31 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	}
 
 	/**
-	 * Whether DTD parsing is supported.
+	 * Return whether DTD parsing is supported.
 	 */
 	public boolean isSupportDtd() {
 		return this.supportDtd;
 	}
 
 	/**
-	 * Indicates whether external XML entities are processed when unmarshalling.
+	 * Indicate whether external XML entities are processed when unmarshalling.
 	 * <p>Default is {@code false}, meaning that external entities are not resolved.
 	 * Note that processing of external entities will only be enabled/disabled when the
 	 * {@code Source} passed to {@link #unmarshal(Source)} is a {@link SAXSource} or
 	 * {@link StreamSource}. It has no effect for {@link DOMSource} or {@link StAXSource}
 	 * instances.
-	 * <p><strong>Note:</strong> setting this option to {@code true} also
-	 * automatically sets {@link #setSupportDtd} to {@code true}.
+	 * <p><strong>Note:</strong> setting this option to {@code true} also automatically
+	 * sets {@link #setSupportDtd} to {@code true}.
 	 */
 	public void setProcessExternalEntities(boolean processExternalEntities) {
 		this.processExternalEntities = processExternalEntities;
 		if (processExternalEntities) {
-			setSupportDtd(true);
+			this.supportDtd = true;
 		}
 	}
 
 	/**
-	 * Returns the configured value for whether XML external entities are allowed.
+	 * Return whether XML external entities are allowed.
 	 */
 	public boolean isProcessExternalEntities() {
 		return this.processExternalEntities;
@@ -465,73 +493,79 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	 * Return the JAXBContext used by this marshaller, lazily building it if necessary.
 	 */
 	public JAXBContext getJaxbContext() {
-		if (this.jaxbContext != null) {
-			return this.jaxbContext;
+		JAXBContext context = this.jaxbContext;
+		if (context != null) {
+			return context;
 		}
 		synchronized (this.jaxbContextMonitor) {
-			if (this.jaxbContext == null) {
+			context = this.jaxbContext;
+			if (context == null) {
 				try {
 					if (StringUtils.hasLength(this.contextPath)) {
-						this.jaxbContext = createJaxbContextFromContextPath();
+						context = createJaxbContextFromContextPath(this.contextPath);
 					}
 					else if (!ObjectUtils.isEmpty(this.classesToBeBound)) {
-						this.jaxbContext = createJaxbContextFromClasses();
+						context = createJaxbContextFromClasses(this.classesToBeBound);
 					}
 					else if (!ObjectUtils.isEmpty(this.packagesToScan)) {
-						this.jaxbContext = createJaxbContextFromPackages();
+						context = createJaxbContextFromPackages(this.packagesToScan);
 					}
+					else {
+						context = JAXBContext.newInstance();
+					}
+					this.jaxbContext = context;
 				}
 				catch (JAXBException ex) {
 					throw convertJaxbException(ex);
 				}
 			}
-			return this.jaxbContext;
+			return context;
 		}
 	}
 
-	private JAXBContext createJaxbContextFromContextPath() throws JAXBException {
-		if (logger.isInfoEnabled()) {
-			logger.info("Creating JAXBContext with context path [" + this.contextPath + "]");
+	private JAXBContext createJaxbContextFromContextPath(String contextPath) throws JAXBException {
+		if (logger.isDebugEnabled()) {
+			logger.debug("Creating JAXBContext with context path [" + this.contextPath + "]");
 		}
 		if (this.jaxbContextProperties != null) {
 			if (this.beanClassLoader != null) {
-				return JAXBContext.newInstance(this.contextPath, this.beanClassLoader, this.jaxbContextProperties);
+				return JAXBContext.newInstance(contextPath, this.beanClassLoader, this.jaxbContextProperties);
 			}
 			else {
 				// analogous to the JAXBContext.newInstance(String) implementation
-				return JAXBContext.newInstance(this.contextPath, Thread.currentThread().getContextClassLoader(),
+				return JAXBContext.newInstance(contextPath, Thread.currentThread().getContextClassLoader(),
 						this.jaxbContextProperties);
 			}
 		}
 		else {
 			if (this.beanClassLoader != null) {
-				return JAXBContext.newInstance(this.contextPath, this.beanClassLoader);
+				return JAXBContext.newInstance(contextPath, this.beanClassLoader);
 			}
 			else {
-				return JAXBContext.newInstance(this.contextPath);
+				return JAXBContext.newInstance(contextPath);
 			}
 		}
 	}
 
-	private JAXBContext createJaxbContextFromClasses() throws JAXBException {
-		if (logger.isInfoEnabled()) {
-			logger.info("Creating JAXBContext with classes to be bound [" +
-					StringUtils.arrayToCommaDelimitedString(this.classesToBeBound) + "]");
+	private JAXBContext createJaxbContextFromClasses(Class<?>... classesToBeBound) throws JAXBException {
+		if (logger.isDebugEnabled()) {
+			logger.debug("Creating JAXBContext with classes to be bound [" +
+					StringUtils.arrayToCommaDelimitedString(classesToBeBound) + "]");
 		}
 		if (this.jaxbContextProperties != null) {
-			return JAXBContext.newInstance(this.classesToBeBound, this.jaxbContextProperties);
+			return JAXBContext.newInstance(classesToBeBound, this.jaxbContextProperties);
 		}
 		else {
-			return JAXBContext.newInstance(this.classesToBeBound);
+			return JAXBContext.newInstance(classesToBeBound);
 		}
 	}
 
-	private JAXBContext createJaxbContextFromPackages() throws JAXBException {
-		if (logger.isInfoEnabled()) {
-			logger.info("Creating JAXBContext by scanning packages [" +
-					StringUtils.arrayToCommaDelimitedString(this.packagesToScan) + "]");
+	private JAXBContext createJaxbContextFromPackages(String... packagesToScan) throws JAXBException {
+		if (logger.isDebugEnabled()) {
+			logger.debug("Creating JAXBContext by scanning packages [" +
+					StringUtils.arrayToCommaDelimitedString(packagesToScan) + "]");
 		}
-		ClassPathJaxb2TypeScanner scanner = new ClassPathJaxb2TypeScanner(this.beanClassLoader, this.packagesToScan);
+		ClassPathJaxb2TypeScanner scanner = new ClassPathJaxb2TypeScanner(this.beanClassLoader, packagesToScan);
 		Class<?>[] jaxb2Classes = scanner.scanPackages();
 		if (logger.isDebugEnabled()) {
 			logger.debug("Found JAXB2 classes: [" + StringUtils.arrayToCommaDelimitedString(jaxb2Classes) + "]");
@@ -545,7 +579,7 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 		}
 	}
 
-	private Schema loadSchema(Resource[] resources, String schemaLanguage) throws IOException, SAXException {
+	private Schema loadSchema(Resource[] resources, String schemaLanguage) throws IOException, SAXException, ParserConfigurationException {
 		if (logger.isDebugEnabled()) {
 			logger.debug("Setting validation schema to " +
 					StringUtils.arrayToCommaDelimitedString(this.schemaResources));
@@ -553,12 +587,15 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 		Assert.notEmpty(resources, "No resources given");
 		Assert.hasLength(schemaLanguage, "No schema language provided");
 		Source[] schemaSources = new Source[resources.length];
-		XMLReader xmlReader = XMLReaderFactory.createXMLReader();
-		xmlReader.setFeature("http://xml.org/sax/features/namespace-prefixes", true);
+		SAXParserFactory saxParserFactory = SAXParserFactory.newInstance();
+		saxParserFactory.setNamespaceAware(true);
+		saxParserFactory.setFeature("http://xml.org/sax/features/namespace-prefixes", true);
+		SAXParser saxParser = saxParserFactory.newSAXParser();
+		XMLReader xmlReader = saxParser.getXMLReader();
 		for (int i = 0; i < resources.length; i++) {
-			Assert.notNull(resources[i], "Resource is null");
-			Assert.isTrue(resources[i].exists(), "Resource " + resources[i] + " does not exist");
-			InputSource inputSource = SaxResourceUtils.createInputSource(resources[i]);
+			Resource resource = resources[i];
+			Assert.isTrue(resource != null && resource.exists(), () -> "Resource does not exist: " + resource);
+			InputSource inputSource = SaxResourceUtils.createInputSource(resource);
 			schemaSources[i] = new SAXSource(xmlReader, inputSource);
 		}
 		SchemaFactory schemaFactory = SchemaFactory.newInstance(schemaLanguage);
@@ -571,32 +608,27 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 
 	@Override
 	public boolean supports(Class<?> clazz) {
-		return ((this.supportJaxbElementClass && JAXBElement.class.isAssignableFrom(clazz)) ||
-				supportsInternal(clazz, this.checkForXmlRootElement));
+		return (this.supportJaxbElementClass && JAXBElement.class.isAssignableFrom(clazz)) ||
+				supportsInternal(clazz, this.checkForXmlRootElement);
 	}
 
 	@Override
 	public boolean supports(Type genericType) {
-		if (genericType instanceof ParameterizedType) {
-			ParameterizedType parameterizedType = (ParameterizedType) genericType;
+		if (genericType instanceof ParameterizedType parameterizedType) {
 			if (JAXBElement.class == parameterizedType.getRawType() &&
 					parameterizedType.getActualTypeArguments().length == 1) {
 				Type typeArgument = parameterizedType.getActualTypeArguments()[0];
-				if (typeArgument instanceof Class) {
-					Class<?> classArgument = (Class<?>) typeArgument;
-					return (((classArgument.isArray() && Byte.TYPE == classArgument.getComponentType())) ||
+				if (typeArgument instanceof Class<?> classArgument) {
+					return ((classArgument.isArray() && Byte.TYPE == classArgument.getComponentType()) ||
 							isPrimitiveWrapper(classArgument) || isStandardClass(classArgument) ||
 							supportsInternal(classArgument, false));
 				}
-				else if (typeArgument instanceof GenericArrayType) {
-					// Only on JDK 6 - see http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=5041784
-					GenericArrayType arrayType = (GenericArrayType) typeArgument;
+				else if (typeArgument instanceof GenericArrayType arrayType) {
 					return (Byte.TYPE == arrayType.getGenericComponentType());
 				}
 			}
 		}
-		else if (genericType instanceof Class) {
-			Class<?> clazz = (Class<?>) genericType;
+		else if (genericType instanceof Class<?> clazz) {
 			return supportsInternal(clazz, this.checkForXmlRootElement);
 		}
 		return false;
@@ -667,7 +699,7 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	}
 
 	@Override
-	public void marshal(Object graph, Result result, MimeContainer mimeContainer) throws XmlMappingException {
+	public void marshal(Object graph, Result result, @Nullable MimeContainer mimeContainer) throws XmlMappingException {
 		try {
 			Marshaller marshaller = createMarshaller();
 			if (this.mtomEnabled && mimeContainer != null) {
@@ -679,6 +711,24 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 			else {
 				marshaller.marshal(graph, result);
 			}
+		}
+		catch (JAXBException ex) {
+			throw convertJaxbException(ex);
+		}
+	}
+
+	/**
+	 * Return a newly created JAXB marshaller.
+	 * <p>Note: JAXB marshallers are not necessarily thread-safe.
+	 * This method is public as of 5.2.
+	 * @since 5.2
+	 * @see #createUnmarshaller()
+	 */
+	public Marshaller createMarshaller() {
+		try {
+			Marshaller marshaller = getJaxbContext().createMarshaller();
+			initJaxbMarshaller(marshaller);
+			return marshaller;
 		}
 		catch (JAXBException ex) {
 			throw convertJaxbException(ex);
@@ -702,31 +752,19 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	}
 
 	/**
-	 * Return a newly created JAXB marshaller. JAXB marshallers are not necessarily thread safe.
-	 */
-	protected Marshaller createMarshaller() {
-		try {
-			Marshaller marshaller = getJaxbContext().createMarshaller();
-			initJaxbMarshaller(marshaller);
-			return marshaller;
-		}
-		catch (JAXBException ex) {
-			throw convertJaxbException(ex);
-		}
-	}
-
-	/**
-	 * Template method that can be overridden by concrete JAXB marshallers for custom initialization behavior.
-	 * Gets called after creation of JAXB {@code Marshaller}, and after the respective properties have been set.
-	 * <p>The default implementation sets the {@link #setMarshallerProperties(Map) defined properties}, the {@link
-	 * #setValidationEventHandler(ValidationEventHandler) validation event handler}, the {@link #setSchemas(Resource[])
-	 * schemas}, {@link #setMarshallerListener(javax.xml.bind.Marshaller.Listener) listener}, and
-	 * {@link #setAdapters(XmlAdapter[]) adapters}.
+	 * Template method that can be overridden by concrete JAXB marshallers
+	 * for custom initialization behavior. Gets called after creation of JAXB
+	 * {@code Marshaller}, and after the respective properties have been set.
+	 * <p>The default implementation sets the
+	 * {@link #setMarshallerProperties defined properties}, the
+	 * {@link #setValidationEventHandler validation event handler}, the
+	 * {@link #setSchemas schemas}, {@link #setMarshallerListener listener},
+	 * and {@link #setAdapters adapters}.
 	 */
 	protected void initJaxbMarshaller(Marshaller marshaller) throws JAXBException {
 		if (this.marshallerProperties != null) {
-			for (String name : this.marshallerProperties.keySet()) {
-				marshaller.setProperty(name, this.marshallerProperties.get(name));
+			for (Map.Entry<String, ?> entry : this.marshallerProperties.entrySet()) {
+				marshaller.setProperty(entry.getKey(), entry.getValue());
 			}
 		}
 		if (this.marshallerListener != null) {
@@ -754,7 +792,7 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	}
 
 	@Override
-	public Object unmarshal(Source source, MimeContainer mimeContainer) throws XmlMappingException {
+	public Object unmarshal(Source source, @Nullable MimeContainer mimeContainer) throws XmlMappingException {
 		source = processSource(source);
 
 		try {
@@ -774,11 +812,28 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 		}
 		catch (NullPointerException ex) {
 			if (!isSupportDtd()) {
-				throw new UnmarshallingFailureException("NPE while unmarshalling. " +
-						"This can happen on JDK 1.6 due to the presence of DTD " +
-						"declarations, which are disabled.", ex);
+				throw new UnmarshallingFailureException("NPE while unmarshalling: " +
+						"This can happen due to the presence of DTD declarations which are disabled.", ex);
 			}
 			throw ex;
+		}
+		catch (JAXBException ex) {
+			throw convertJaxbException(ex);
+		}
+	}
+
+	/**
+	 * Return a newly created JAXB unmarshaller.
+	 * <p>Note: JAXB unmarshallers are not necessarily thread-safe.
+	 * This method is public as of 5.2.
+	 * @since 5.2
+	 * @see #createMarshaller()
+	 */
+	public Unmarshaller createUnmarshaller() {
+		try {
+			Unmarshaller unmarshaller = getJaxbContext().createUnmarshaller();
+			initJaxbUnmarshaller(unmarshaller);
+			return unmarshaller;
 		}
 		catch (JAXBException ex) {
 			throw convertJaxbException(ex);
@@ -813,13 +868,11 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 		XMLReader xmlReader = null;
 		InputSource inputSource = null;
 
-		if (source instanceof SAXSource) {
-			SAXSource saxSource = (SAXSource) source;
+		if (source instanceof SAXSource saxSource) {
 			xmlReader = saxSource.getXMLReader();
 			inputSource = saxSource.getInputSource();
 		}
-		else if (source instanceof StreamSource) {
-			StreamSource streamSource = (StreamSource) source;
+		else if (source instanceof StreamSource streamSource) {
 			if (streamSource.getInputStream() != null) {
 				inputSource = new InputSource(streamSource.getInputStream());
 			}
@@ -833,49 +886,39 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 
 		try {
 			if (xmlReader == null) {
-				xmlReader = XMLReaderFactory.createXMLReader();
+				SAXParserFactory saxParserFactory = SAXParserFactory.newInstance();
+				saxParserFactory.setNamespaceAware(true);
+				saxParserFactory.setFeature("http://apache.org/xml/features/disallow-doctype-decl", !isSupportDtd());
+				String name = "http://xml.org/sax/features/external-general-entities";
+				saxParserFactory.setFeature(name, isProcessExternalEntities());
+				SAXParser saxParser = saxParserFactory.newSAXParser();
+				xmlReader = saxParser.getXMLReader();
 			}
-			xmlReader.setFeature("http://apache.org/xml/features/disallow-doctype-decl", !isSupportDtd());
-			String name = "http://xml.org/sax/features/external-general-entities";
-			xmlReader.setFeature(name, isProcessExternalEntities());
 			if (!isProcessExternalEntities()) {
 				xmlReader.setEntityResolver(NO_OP_ENTITY_RESOLVER);
 			}
 			return new SAXSource(xmlReader, inputSource);
 		}
-		catch (SAXException ex) {
-			logger.warn("Processing of external entities could not be disabled", ex);
+		catch (SAXException | ParserConfigurationException ex) {
+			logger.info("Processing of external entities could not be disabled", ex);
 			return source;
 		}
 	}
 
 	/**
-	 * Return a newly created JAXB unmarshaller.
-	 * Note: JAXB unmarshallers are not necessarily thread-safe.
-	 */
-	protected Unmarshaller createUnmarshaller() {
-		try {
-			Unmarshaller unmarshaller = getJaxbContext().createUnmarshaller();
-			initJaxbUnmarshaller(unmarshaller);
-			return unmarshaller;
-		}
-		catch (JAXBException ex) {
-			throw convertJaxbException(ex);
-		}
-	}
-
-	/**
-	 * Template method that can be overridden by concrete JAXB marshallers for custom initialization behavior.
-	 * Gets called after creation of JAXB {@code Marshaller}, and after the respective properties have been set.
-	 * <p>The default implementation sets the {@link #setUnmarshallerProperties(Map) defined properties}, the {@link
-	 * #setValidationEventHandler(ValidationEventHandler) validation event handler}, the {@link #setSchemas(Resource[])
-	 * schemas}, {@link #setUnmarshallerListener(javax.xml.bind.Unmarshaller.Listener) listener}, and
-	 * {@link #setAdapters(XmlAdapter[]) adapters}.
+	 * Template method that can be overridden by concrete JAXB marshallers
+	 * for custom initialization behavior. Gets called after creation of JAXB
+	 * {@code Marshaller}, and after the respective properties have been set.
+	 * <p>The default implementation sets the
+	 * {@link #setUnmarshallerProperties defined properties}, the
+	 * {@link #setValidationEventHandler validation event handler}, the
+	 * {@link #setSchemas schemas}, {@link #setUnmarshallerListener listener},
+	 * and {@link #setAdapters adapters}.
 	 */
 	protected void initJaxbUnmarshaller(Unmarshaller unmarshaller) throws JAXBException {
 		if (this.unmarshallerProperties != null) {
-			for (String name : this.unmarshallerProperties.keySet()) {
-				unmarshaller.setProperty(name, this.unmarshallerProperties.get(name));
+			for (Map.Entry<String, ?> entry : this.unmarshallerProperties.entrySet()) {
+				unmarshaller.setProperty(entry.getKey(), entry.getValue());
 			}
 		}
 		if (this.unmarshallerListener != null) {
@@ -895,9 +938,9 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 	}
 
 	/**
-	 * Convert the given {@code JAXBException} to an appropriate exception from the
-	 * {@code org.springframework.oxm} hierarchy.
-	 * @param ex {@code JAXBException} that occured
+	 * Convert the given {@code JAXBException} to an appropriate exception
+	 * from the {@code org.springframework.oxm} hierarchy.
+	 * @param ex {@code JAXBException} that occurred
 	 * @return the corresponding {@code XmlMappingException}
 	 */
 	protected XmlMappingException convertJaxbException(JAXBException ex) {
@@ -937,21 +980,16 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 			String host = getHost(elementNamespace, dataHandler);
 			String contentId = UUID.randomUUID() + "@" + host;
 			this.mimeContainer.addAttachment("<" + contentId + ">", dataHandler);
-			try {
-				contentId = URLEncoder.encode(contentId, "UTF-8");
-			}
-			catch (UnsupportedEncodingException e) {
-				// ignore
-			}
+			contentId = URLEncoder.encode(contentId, StandardCharsets.UTF_8);
 			return CID + contentId;
 		}
 
 		private String getHost(String elementNamespace, DataHandler dataHandler) {
 			try {
-				URI uri = new URI(elementNamespace);
+				URI uri = ResourceUtils.toURI(elementNamespace);
 				return uri.getHost();
 			}
-			catch (URISyntaxException e) {
+			catch (URISyntaxException ex) {
 				// ignore
 			}
 			return dataHandler.getName();
@@ -986,7 +1024,7 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 				return FileCopyUtils.copyToByteArray(dataHandler.getInputStream());
 			}
 			catch (IOException ex) {
-				throw new UnmarshallingFailureException("Couldn't read attachment", ex);
+				throw new UnmarshallingFailureException("Could not read attachment", ex);
 			}
 		}
 
@@ -994,15 +1032,14 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 		public DataHandler getAttachmentAsDataHandler(String contentId) {
 			if (contentId.startsWith(CID)) {
 				contentId = contentId.substring(CID.length());
-				try {
-					contentId = URLDecoder.decode(contentId, "UTF-8");
-				}
-				catch (UnsupportedEncodingException e) {
-					// ignore
-				}
+				contentId = URLDecoder.decode(contentId, StandardCharsets.UTF_8);
 				contentId = '<' + contentId + '>';
 			}
-			return this.mimeContainer.getAttachment(contentId);
+			DataHandler dataHandler = this.mimeContainer.getAttachment(contentId);
+			if (dataHandler == null) {
+				throw new IllegalArgumentException("No attachment found for " + contentId);
+			}
+			return dataHandler;
 		}
 
 		@Override
@@ -1033,12 +1070,12 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 		}
 
 		@Override
-		public InputStream getInputStream() throws IOException {
+		public InputStream getInputStream() {
 			return new ByteArrayInputStream(this.data, this.offset, this.length);
 		}
 
 		@Override
-		public OutputStream getOutputStream() throws IOException {
+		public OutputStream getOutputStream() {
 			throw new UnsupportedOperationException();
 		}
 
@@ -1052,13 +1089,5 @@ public class Jaxb2Marshaller implements MimeMarshaller, MimeUnmarshaller, Generi
 			return "ByteArrayDataSource";
 		}
 	}
-
-
-	private static final EntityResolver NO_OP_ENTITY_RESOLVER = new EntityResolver() {
-		@Override
-		public InputSource resolveEntity(String publicId, String systemId) {
-			return new InputSource(new StringReader(""));
-		}
-	};
 
 }
