@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2012 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,27 +17,26 @@
 package org.springframework.mock.web;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
-import javax.servlet.Filter;
-import javax.servlet.FilterChain;
-import javax.servlet.FilterConfig;
-import javax.servlet.Servlet;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
 
+import jakarta.servlet.Filter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.FilterConfig;
+import jakarta.servlet.Servlet;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+
+import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
 import org.springframework.util.ObjectUtils;
 
 /**
- * <p>Mock implementation of the {@link javax.servlet.FilterChain} interface. Used
- * for testing the web framework; also useful for testing custom
- * {@link javax.servlet.Filter} implementations.
+ * Mock implementation of the {@link jakarta.servlet.FilterChain} interface.
  *
- * <p>A {@link MockFilterChain} can be configured with one or more filters and a
+ * <p>A {@code MockFilterChain} can be configured with one or more filters and a
  * Servlet to invoke. The first time the chain is called, it invokes all filters
  * and the Servlet, and saves the request and response. Subsequent invocations
  * raise an {@link IllegalStateException} unless {@link #reset()} is called.
@@ -45,35 +44,34 @@ import org.springframework.util.ObjectUtils;
  * @author Juergen Hoeller
  * @author Rob Winch
  * @author Rossen Stoyanchev
- *
  * @since 2.0.3
  * @see MockFilterConfig
  * @see PassThroughFilterChain
  */
 public class MockFilterChain implements FilterChain {
 
+	@Nullable
 	private ServletRequest request;
 
+	@Nullable
 	private ServletResponse response;
 
 	private final List<Filter> filters;
 
+	@Nullable
 	private Iterator<Filter> iterator;
 
 
 	/**
-	 * Register a single do-nothing {@link Filter} implementation. The first
-	 * invocation saves the request and response. Subsequent invocations raise
-	 * an {@link IllegalStateException} unless {@link #reset()} is called.
+	 * Create an empty {@code MockFilterChain} without any {@linkplain Filter filters}.
 	 */
 	public MockFilterChain() {
 		this.filters = Collections.emptyList();
 	}
 
 	/**
-	 * Create a FilterChain with a Servlet.
-	 *
-	 * @param servlet the Servlet to invoke
+	 * Create a {@code MockFilterChain} with a {@link Servlet}.
+	 * @param servlet the {@code Servlet} to invoke
 	 * @since 3.2
 	 */
 	public MockFilterChain(Servlet servlet) {
@@ -81,10 +79,10 @@ public class MockFilterChain implements FilterChain {
 	}
 
 	/**
-	 * Create a {@code FilterChain} with Filter's and a Servlet.
-	 *
-	 * @param servlet the {@link Servlet} to invoke in this {@link FilterChain}
-	 * @param filters the {@link Filter}'s to invoke in this {@link FilterChain}
+	 * Create a {@code MockFilterChain} with a {@link Servlet} and {@linkplain Filter
+	 * filters}.
+	 * @param servlet the {@code Servlet} to invoke in this {@code MockFilterChain}
+	 * @param filters the filters to invoke in this {@code MockFilterChain}
 	 * @since 3.2
 	 */
 	public MockFilterChain(Servlet servlet, Filter... filters) {
@@ -95,12 +93,14 @@ public class MockFilterChain implements FilterChain {
 
 	private static List<Filter> initFilterList(Servlet servlet, Filter... filters) {
 		Filter[] allFilters = ObjectUtils.addObjectToArray(filters, new ServletFilterProxy(servlet));
-		return Arrays.asList(allFilters);
+		return List.of(allFilters);
 	}
+
 
 	/**
 	 * Return the request that {@link #doFilter} has been called with.
 	 */
+	@Nullable
 	public ServletRequest getRequest() {
 		return this.request;
 	}
@@ -108,22 +108,20 @@ public class MockFilterChain implements FilterChain {
 	/**
 	 * Return the response that {@link #doFilter} has been called with.
 	 */
+	@Nullable
 	public ServletResponse getResponse() {
 		return this.response;
 	}
 
 	/**
-	 * Invoke registered {@link Filter}s and/or {@link Servlet} also saving the
+	 * Invoke registered {@link Filter Filters} and/or {@link Servlet} also saving the
 	 * request and response.
 	 */
 	@Override
 	public void doFilter(ServletRequest request, ServletResponse response) throws IOException, ServletException {
 		Assert.notNull(request, "Request must not be null");
 		Assert.notNull(response, "Response must not be null");
-
-		if (this.request != null) {
-			 throw new IllegalStateException("This FilterChain has already been called!");
-		}
+		Assert.state(this.request == null, "This FilterChain has already been called!");
 
 		if (this.iterator == null) {
 			this.iterator = this.filters.iterator();
@@ -139,7 +137,7 @@ public class MockFilterChain implements FilterChain {
 	}
 
 	/**
-	 * Reset the {@link MockFilterChain} allowing it to be invoked again.
+	 * Reset this {@code MockFilterChain} allowing it to be invoked again.
 	 */
 	public void reset() {
 		this.request = null;
@@ -151,7 +149,7 @@ public class MockFilterChain implements FilterChain {
 	/**
 	 * A filter that simply delegates to a Servlet.
 	 */
-	private static class ServletFilterProxy implements Filter {
+	private static final class ServletFilterProxy implements Filter {
 
 		private final Servlet delegateServlet;
 
