@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2015 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -20,11 +20,12 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.http.HttpMethod;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
 
 /**
  * Unit tests for {@link CorsConfiguration}.
@@ -32,183 +33,419 @@ import static org.junit.Assert.*;
  * @author Sebastien Deleuze
  * @author Sam Brannen
  */
-public class CorsConfigurationTests {
-
-	private CorsConfiguration config = new CorsConfiguration();
+class CorsConfigurationTests {
 
 	@Test
-	public void setNullValues() {
+	void setNullValues() {
+		CorsConfiguration config = new CorsConfiguration();
 		config.setAllowedOrigins(null);
-		assertNull(config.getAllowedOrigins());
+		assertThat(config.getAllowedOrigins()).isNull();
+		config.setAllowedOriginPatterns(null);
+		assertThat(config.getAllowedOriginPatterns()).isNull();
 		config.setAllowedHeaders(null);
-		assertNull(config.getAllowedHeaders());
+		assertThat(config.getAllowedHeaders()).isNull();
 		config.setAllowedMethods(null);
-		assertNull(config.getAllowedMethods());
+		assertThat(config.getAllowedMethods()).isNull();
 		config.setExposedHeaders(null);
-		assertNull(config.getExposedHeaders());
+		assertThat(config.getExposedHeaders()).isNull();
 		config.setAllowCredentials(null);
-		assertNull(config.getAllowCredentials());
-		config.setMaxAge(null);
-		assertNull(config.getMaxAge());
+		assertThat(config.getAllowCredentials()).isNull();
+		config.setMaxAge((Long) null);
+		assertThat(config.getMaxAge()).isNull();
 	}
 
 	@Test
-	public void setValues() {
+	void setValues() {
+		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
-		assertEquals(Arrays.asList("*"), config.getAllowedOrigins());
+		config.addAllowedOriginPattern("http://*.example.com");
 		config.addAllowedHeader("*");
-		assertEquals(Arrays.asList("*"), config.getAllowedHeaders());
 		config.addAllowedMethod("*");
-		assertEquals(Arrays.asList("*"), config.getAllowedMethods());
-		config.addExposedHeader("header1");
-		config.addExposedHeader("header2");
-		assertEquals(Arrays.asList("header1", "header2"), config.getExposedHeaders());
-		config.setAllowCredentials(true);
-		assertTrue(config.getAllowCredentials());
-		config.setMaxAge(123L);
-		assertEquals(new Long(123), config.getMaxAge());
-	}
-
-	@Test(expected = IllegalArgumentException.class)
-	public void asteriskWildCardOnAddExposedHeader() {
 		config.addExposedHeader("*");
-	}
+		config.setAllowCredentials(true);
+		config.setMaxAge(123L);
 
-	@Test(expected = IllegalArgumentException.class)
-	public void asteriskWildCardOnSetExposedHeaders() {
-		config.setExposedHeaders(Arrays.asList("*"));
+		assertThat(config.getAllowedOrigins()).containsExactly("*");
+		assertThat(config.getAllowedOriginPatterns()).containsExactly("http://*.example.com");
+		assertThat(config.getAllowedHeaders()).containsExactly("*");
+		assertThat(config.getAllowedMethods()).containsExactly("*");
+		assertThat(config.getExposedHeaders()).containsExactly("*");
+		assertThat(config.getAllowCredentials()).isTrue();
+		assertThat(config.getMaxAge()).isEqualTo(Long.valueOf(123));
 	}
 
 	@Test
-	public void combineWithNull() {
-		config.setAllowedOrigins(Arrays.asList("*"));
+	void combineWithNull() {
+		CorsConfiguration config = new CorsConfiguration();
+		config.setAllowedOrigins(Collections.singletonList("*"));
 		config.combine(null);
-		assertEquals(Arrays.asList("*"), config.getAllowedOrigins());
+		assertThat(config.getAllowedOrigins()).containsExactly("*");
+		assertThat(config.getAllowedOriginPatterns()).isNull();
 	}
 
 	@Test
-	public void combineWithNullProperties() {
+	void combineWithNullProperties() {
+		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
+		config.setAllowedOriginPatterns(Collections.singletonList("http://*.example.com"));
 		config.addAllowedHeader("header1");
 		config.addExposedHeader("header3");
 		config.addAllowedMethod(HttpMethod.GET.name());
 		config.setMaxAge(123L);
 		config.setAllowCredentials(true);
+
 		CorsConfiguration other = new CorsConfiguration();
 		config = config.combine(other);
-		assertEquals(Arrays.asList("*"), config.getAllowedOrigins());
-		assertEquals(Arrays.asList("header1"), config.getAllowedHeaders());
-		assertEquals(Arrays.asList("header3"), config.getExposedHeaders());
-		assertEquals(Arrays.asList(HttpMethod.GET.name()), config.getAllowedMethods());
-		assertEquals(new Long(123), config.getMaxAge());
-		assertTrue(config.getAllowCredentials());
+
+		assertThat(config).isNotNull();
+		assertThat(config.getAllowedOrigins()).containsExactly("*");
+		assertThat(config.getAllowedOriginPatterns()).containsExactly("http://*.example.com");
+		assertThat(config.getAllowedHeaders()).containsExactly("header1");
+		assertThat(config.getExposedHeaders()).containsExactly("header3");
+		assertThat(config.getAllowedMethods()).containsExactly(HttpMethod.GET.name());
+		assertThat(config.getMaxAge()).isEqualTo(Long.valueOf(123));
+		assertThat(config.getAllowCredentials()).isTrue();
+	}
+
+	@Test  // SPR-15772
+	void combineWithDefaultPermitValues() {
+		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
+		CorsConfiguration other = new CorsConfiguration();
+		other.addAllowedOrigin("https://domain.com");
+		other.addAllowedHeader("header1");
+		other.addAllowedMethod(HttpMethod.PUT.name());
+
+		CorsConfiguration combinedConfig = config.combine(other);
+		assertThat(combinedConfig).isNotNull();
+		assertThat(combinedConfig.getAllowedOrigins()).containsExactly("https://domain.com");
+		assertThat(combinedConfig.getAllowedHeaders()).containsExactly("header1");
+		assertThat(combinedConfig.getAllowedMethods()).containsExactly(HttpMethod.PUT.name());
+		assertThat(combinedConfig.getExposedHeaders()).isEmpty();
+
+		combinedConfig = other.combine(config);
+		assertThat(combinedConfig).isNotNull();
+		assertThat(combinedConfig.getAllowedOrigins()).containsExactly("https://domain.com");
+		assertThat(combinedConfig.getAllowedHeaders()).containsExactly("header1");
+		assertThat(combinedConfig.getAllowedMethods()).containsExactly(HttpMethod.PUT.name());
+		assertThat(combinedConfig.getExposedHeaders()).isEmpty();
+
+		combinedConfig = config.combine(new CorsConfiguration());
+		assertThat(config.getAllowedOrigins()).containsExactly("*");
+		assertThat(config.getAllowedHeaders()).containsExactly("*");
+		assertThat(combinedConfig).isNotNull();
+		assertThat(combinedConfig.getAllowedMethods())
+				.containsExactly(HttpMethod.GET.name(), HttpMethod.HEAD.name(), HttpMethod.POST.name());
+		assertThat(combinedConfig.getExposedHeaders()).isEmpty();
+
+		combinedConfig = new CorsConfiguration().combine(config);
+		assertThat(config.getAllowedOrigins()).containsExactly("*");
+		assertThat(config.getAllowedHeaders()).containsExactly("*");
+		assertThat(combinedConfig).isNotNull();
+		assertThat(combinedConfig.getAllowedMethods())
+				.containsExactly(HttpMethod.GET.name(), HttpMethod.HEAD.name(), HttpMethod.POST.name());
+		assertThat(combinedConfig.getExposedHeaders()).isEmpty();
 	}
 
 	@Test
-	public void combineWithAsteriskWildCard() {
+	void combinePatternWithDefaultPermitValues() {
+		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
+		CorsConfiguration other = new CorsConfiguration();
+		other.addAllowedOriginPattern("http://*.com");
+
+		CorsConfiguration combinedConfig = other.combine(config);
+		assertThat(combinedConfig).isNotNull();
+		assertThat(combinedConfig.getAllowedOrigins()).isNull();
+		assertThat(combinedConfig.getAllowedOriginPatterns()).containsExactly("http://*.com");
+
+		combinedConfig = config.combine(other);
+		assertThat(combinedConfig).isNotNull();
+		assertThat(combinedConfig.getAllowedOrigins()).isNull();
+		assertThat(combinedConfig.getAllowedOriginPatterns()).containsExactly("http://*.com");
+	}
+
+	@Test
+	void combinePatternWithDefaultPermitValuesAndCustomOrigin() {
+		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
+		config.setAllowedOrigins(Collections.singletonList("https://domain.com"));
+
+		CorsConfiguration other = new CorsConfiguration();
+		other.addAllowedOriginPattern("http://*.com");
+
+		CorsConfiguration combinedConfig = other.combine(config);
+		assertThat(combinedConfig).isNotNull();
+		assertThat(combinedConfig.getAllowedOrigins()).containsExactly("https://domain.com");
+		assertThat(combinedConfig.getAllowedOriginPatterns()).containsExactly("http://*.com");
+
+		combinedConfig = config.combine(other);
+		assertThat(combinedConfig).isNotNull();
+		assertThat(combinedConfig.getAllowedOrigins()).containsExactly("https://domain.com");
+		assertThat(combinedConfig.getAllowedOriginPatterns()).containsExactly("http://*.com");
+	}
+
+	@Test
+	void combineWithAsteriskWildCard() {
+		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
 		config.addAllowedHeader("*");
+		config.addExposedHeader("*");
 		config.addAllowedMethod("*");
+		config.addAllowedOriginPattern("*");
+
 		CorsConfiguration other = new CorsConfiguration();
-		other.addAllowedOrigin("http://domain.com");
+		other.addAllowedOrigin("https://domain.com");
+		other.addAllowedOriginPattern("http://*.company.com");
 		other.addAllowedHeader("header1");
 		other.addExposedHeader("header2");
+		other.addAllowedHeader("anotherHeader1");
+		other.addExposedHeader("anotherHeader2");
 		other.addAllowedMethod(HttpMethod.PUT.name());
-		config = config.combine(other);
-		assertEquals(Arrays.asList("http://domain.com"), config.getAllowedOrigins());
-		assertEquals(Arrays.asList("header1"), config.getAllowedHeaders());
-		assertEquals(Arrays.asList("header2"), config.getExposedHeaders());
-		assertEquals(Arrays.asList(HttpMethod.PUT.name()), config.getAllowedMethods());
+
+		CorsConfiguration combinedConfig = config.combine(other);
+		assertThat(combinedConfig).isNotNull();
+		assertThat(combinedConfig.getAllowedOrigins()).containsExactly("*");
+		assertThat(combinedConfig.getAllowedOriginPatterns()).containsExactly("*");
+		assertThat(combinedConfig.getAllowedHeaders()).containsExactly("*");
+		assertThat(combinedConfig.getExposedHeaders()).containsExactly("*");
+		assertThat(combinedConfig.getAllowedMethods()).containsExactly("*");
+
+		combinedConfig = other.combine(config);
+		assertThat(combinedConfig).isNotNull();
+		assertThat(combinedConfig.getAllowedOrigins()).containsExactly("*");
+		assertThat(combinedConfig.getAllowedOriginPatterns()).containsExactly("*");
+		assertThat(combinedConfig.getAllowedHeaders()).containsExactly("*");
+		assertThat(combinedConfig.getExposedHeaders()).containsExactly("*");
+		assertThat(combinedConfig.getAllowedMethods()).containsExactly("*");
+		assertThat(combinedConfig.getAllowedHeaders()).containsExactly("*");
+	}
+
+	@Test  // SPR-14792
+	void combineWithDuplicatedElements() {
+		CorsConfiguration config = new CorsConfiguration();
+		config.addAllowedOrigin("https://domain1.com");
+		config.addAllowedOrigin("https://domain2.com");
+		config.addAllowedHeader("header1");
+		config.addAllowedHeader("header2");
+		config.addExposedHeader("header3");
+		config.addExposedHeader("header4");
+		config.addAllowedMethod(HttpMethod.GET.name());
+		config.addAllowedMethod(HttpMethod.PUT.name());
+		config.addAllowedOriginPattern("http://*.domain1.com");
+		config.addAllowedOriginPattern("http://*.domain2.com");
+
+		CorsConfiguration other = new CorsConfiguration();
+		other.addAllowedOrigin("https://domain1.com");
+		other.addAllowedOriginPattern("http://*.domain1.com");
+		other.addAllowedHeader("header1");
+		other.addExposedHeader("header3");
+		other.addAllowedMethod(HttpMethod.GET.name());
+
+		CorsConfiguration combinedConfig = config.combine(other);
+		assertThat(combinedConfig).isNotNull();
+		assertThat(combinedConfig.getAllowedOrigins()).containsExactly("https://domain1.com", "https://domain2.com");
+		assertThat(combinedConfig.getAllowedHeaders()).containsExactly("header1", "header2");
+		assertThat(combinedConfig.getExposedHeaders()).containsExactly("header3", "header4");
+		assertThat(combinedConfig.getAllowedMethods()).containsExactly(HttpMethod.GET.name(), HttpMethod.PUT.name());
+		assertThat(combinedConfig.getAllowedOriginPatterns()).containsExactly("http://*.domain1.com", "http://*.domain2.com");
 	}
 
 	@Test
-	public void combine() {
-		config.addAllowedOrigin("http://domain1.com");
+	void combine() {
+		CorsConfiguration config = new CorsConfiguration();
+		config.addAllowedOrigin("https://domain1.com");
+		config.addAllowedOriginPattern("http://*.domain1.com");
 		config.addAllowedHeader("header1");
 		config.addExposedHeader("header3");
 		config.addAllowedMethod(HttpMethod.GET.name());
 		config.setMaxAge(123L);
 		config.setAllowCredentials(true);
+
 		CorsConfiguration other = new CorsConfiguration();
-		other.addAllowedOrigin("http://domain2.com");
+		other.addAllowedOrigin("https://domain2.com");
+		other.addAllowedOriginPattern("http://*.domain2.com");
 		other.addAllowedHeader("header2");
 		other.addExposedHeader("header4");
 		other.addAllowedMethod(HttpMethod.PUT.name());
 		other.setMaxAge(456L);
 		other.setAllowCredentials(false);
+
 		config = config.combine(other);
-		assertEquals(Arrays.asList("http://domain1.com", "http://domain2.com"), config.getAllowedOrigins());
-		assertEquals(Arrays.asList("header1", "header2"), config.getAllowedHeaders());
-		assertEquals(Arrays.asList("header3", "header4"), config.getExposedHeaders());
-		assertEquals(Arrays.asList(HttpMethod.GET.name(), HttpMethod.PUT.name()), config.getAllowedMethods());
-		assertEquals(new Long(456), config.getMaxAge());
-		assertFalse(config.getAllowCredentials());
+		assertThat(config).isNotNull();
+		assertThat(config.getAllowedOrigins()).containsExactly("https://domain1.com", "https://domain2.com");
+		assertThat(config.getAllowedHeaders()).containsExactly("header1", "header2");
+		assertThat(config.getExposedHeaders()).containsExactly("header3", "header4");
+		assertThat(config.getAllowedMethods()).containsExactly(HttpMethod.GET.name(), HttpMethod.PUT.name());
+		assertThat(config.getMaxAge()).isEqualTo(Long.valueOf(456));
+		assertThat(config).isNotNull();
+		assertThat(config.getAllowCredentials()).isFalse();
+		assertThat(config.getAllowedOriginPatterns()).containsExactly("http://*.domain1.com", "http://*.domain2.com");
 	}
 
 	@Test
-	public void checkOriginAllowed() {
-		config.setAllowedOrigins(Arrays.asList("*"));
-		assertEquals("*", config.checkOrigin("http://domain.com"));
-		config.setAllowCredentials(true);
-		assertEquals("http://domain.com", config.checkOrigin("http://domain.com"));
-		config.setAllowedOrigins(Arrays.asList("http://domain.com"));
-		assertEquals("http://domain.com", config.checkOrigin("http://domain.com"));
-		config.setAllowCredentials(false);
-		assertEquals("http://domain.com", config.checkOrigin("http://domain.com"));
-	}
-
-	@Test
-	public void checkOriginNotAllowed() {
-		assertNull(config.checkOrigin(null));
-		assertNull(config.checkOrigin("http://domain.com"));
+	void checkOriginAllowed() {
+		// "*" matches
+		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
-		assertNull(config.checkOrigin(null));
-		config.setAllowedOrigins(Arrays.asList("http://domain1.com"));
-		assertNull(config.checkOrigin("http://domain2.com"));
+		assertThat(config.checkOrigin("https://domain.com")).isEqualTo("*");
+
+		// "*" does not match together with allowCredentials
+		config.setAllowCredentials(true);
+		assertThatIllegalArgumentException().isThrownBy(() -> config.checkOrigin("https://domain.com"));
+
+		// comma-delimited origins list
+		config.setAllowedOrigins(Collections.singletonList("https://a1.com,https://a2.com"));
+		assertThat(config.checkOrigin("https://a1.com")).isEqualTo("https://a1.com");
+		assertThat(config.checkOrigin("https://a2.com/")).isEqualTo("https://a2.com/");
+
+		// specific origin matches Origin header with or without trailing "/"
+		config.setAllowedOrigins(Collections.singletonList("https://domain.com"));
+		assertThat(config.checkOrigin("https://domain.com")).isEqualTo("https://domain.com");
+		assertThat(config.checkOrigin("https://domain.com/")).isEqualTo("https://domain.com/");
+
+		// specific origin with trailing "/" matches Origin header with or without trailing "/"
+		config.setAllowedOrigins(Collections.singletonList("https://domain.com/"));
+		assertThat(config.checkOrigin("https://domain.com")).isEqualTo("https://domain.com");
+		assertThat(config.checkOrigin("https://domain.com/")).isEqualTo("https://domain.com/");
+
+		config.setAllowCredentials(false);
+		assertThat(config.checkOrigin("https://domain.com")).isEqualTo("https://domain.com");
+	}
+
+	@Test
+	void checkOriginNotAllowed() {
+		CorsConfiguration config = new CorsConfiguration();
+		assertThat(config.checkOrigin(null)).isNull();
+		assertThat(config.checkOrigin("https://domain.com")).isNull();
+
+		config.addAllowedOrigin("*");
+		assertThat(config.checkOrigin(null)).isNull();
+
+		config.setAllowedOrigins(Collections.singletonList("https://domain1.com"));
+		assertThat(config.checkOrigin("https://domain2.com")).isNull();
+
 		config.setAllowedOrigins(new ArrayList<>());
-		assertNull(config.checkOrigin("http://domain.com"));
+		assertThat(config.checkOrigin("https://domain.com")).isNull();
 	}
 
 	@Test
-	public void checkMethodAllowed() {
-		assertEquals(Arrays.asList(HttpMethod.GET), config.checkHttpMethod(HttpMethod.GET));
+	void checkOriginPatternAllowed() {
+		CorsConfiguration config = new CorsConfiguration();
+		assertThat(config.checkOrigin("https://domain.com")).isNull();
+
+		config.applyPermitDefaultValues();
+		assertThat(config.checkOrigin("https://domain.com")).isEqualTo("*");
+
+		config.setAllowCredentials(true);
+		assertThatIllegalArgumentException().isThrownBy(() -> config.checkOrigin("https://domain.com"));
+
+		config.addAllowedOriginPattern("https://*.domain.com");
+		assertThat(config.checkOrigin("https://example.domain.com")).isEqualTo("https://example.domain.com");
+
+		config.addAllowedOriginPattern("https://*.port.domain.com:[*]");
+		assertThat(config.checkOrigin("https://example.port.domain.com")).isEqualTo("https://example.port.domain.com");
+		assertThat(config.checkOrigin("https://example.port.domain.com:1234")).isEqualTo("https://example.port.domain.com:1234");
+
+		config.addAllowedOriginPattern("https://*.specific.port.com:[8080,8081]");
+		assertThat(config.checkOrigin("https://example.specific.port.com:8080")).isEqualTo("https://example.specific.port.com:8080");
+		assertThat(config.checkOrigin("https://example.specific.port.com:8081")).isEqualTo("https://example.specific.port.com:8081");
+		assertThat(config.checkOrigin("https://example.specific.port.com:1234")).isNull();
+
+		config.addAllowedOriginPattern("https://*.a1.com:[8080,8081],https://*.a2.com");
+		assertThat(config.checkOrigin("https://example.a1.com:8080")).isEqualTo("https://example.a1.com:8080");
+		assertThat(config.checkOrigin("https://example.a1.com:8081")).isEqualTo("https://example.a1.com:8081");
+		assertThat(config.checkOrigin("https://example.a1.com:8082")).isNull();
+		assertThat(config.checkOrigin("https://example.a2.com")).isEqualTo("https://example.a2.com");
+
+		config.setAllowCredentials(false);
+		assertThat(config.checkOrigin("https://example.domain.com")).isEqualTo("https://example.domain.com");
+	}
+
+	@Test
+	void checkOriginPatternNotAllowed() {
+		CorsConfiguration config = new CorsConfiguration();
+		assertThat(config.checkOrigin(null)).isNull();
+		assertThat(config.checkOrigin("https://domain.com")).isNull();
+		config.addAllowedOriginPattern("*");
+		assertThat(config.checkOrigin(null)).isNull();
+
+		config.setAllowedOriginPatterns(Collections.singletonList("http://*.domain1.com"));
+		assertThat(config.checkOrigin("https://domain2.com")).isNull();
+
+		config.setAllowedOriginPatterns(new ArrayList<>());
+		assertThat(config.checkOrigin("https://domain.com")).isNull();
+
+		config.setAllowedOriginPatterns(Collections.singletonList("https://*.specific.port.com:[8080,8081]"));
+		assertThat(config.checkOrigin("https://example.specific.port.com:1234")).isNull();
+	}
+
+	@Test
+	void checkMethodAllowed() {
+		CorsConfiguration config = new CorsConfiguration();
+		assertThat(config.checkHttpMethod(HttpMethod.GET)).containsExactly(HttpMethod.GET, HttpMethod.HEAD);
+
 		config.addAllowedMethod("GET");
-		assertEquals(Arrays.asList(HttpMethod.GET), config.checkHttpMethod(HttpMethod.GET));
+		assertThat(config.checkHttpMethod(HttpMethod.GET)).containsExactly(HttpMethod.GET);
+
 		config.addAllowedMethod("POST");
-		assertEquals(Arrays.asList(HttpMethod.GET, HttpMethod.POST), config.checkHttpMethod(HttpMethod.GET));
-		assertEquals(Arrays.asList(HttpMethod.GET, HttpMethod.POST), config.checkHttpMethod(HttpMethod.POST));
+		assertThat(config.checkHttpMethod(HttpMethod.GET)).containsExactly(HttpMethod.GET, HttpMethod.POST);
+		assertThat(config.checkHttpMethod(HttpMethod.POST)).containsExactly(HttpMethod.GET, HttpMethod.POST);
 	}
 
 	@Test
-	public void checkMethodNotAllowed() {
-		assertNull(config.checkHttpMethod(null));
-		assertNull(config.checkHttpMethod(HttpMethod.DELETE));
+	void checkMethodNotAllowed() {
+		CorsConfiguration config = new CorsConfiguration();
+		assertThat(config.checkHttpMethod(null)).isNull();
+		assertThat(config.checkHttpMethod(HttpMethod.DELETE)).isNull();
+
 		config.setAllowedMethods(new ArrayList<>());
-		assertNull(config.checkHttpMethod(HttpMethod.HEAD));
+		assertThat(config.checkHttpMethod(HttpMethod.POST)).isNull();
 	}
 
 	@Test
-	public void checkHeadersAllowed() {
-		assertEquals(Collections.emptyList(), config.checkHeaders(Collections.emptyList()));
+	void checkHeadersAllowed() {
+		CorsConfiguration config = new CorsConfiguration();
+		assertThat(config.checkHeaders(Collections.emptyList())).isEqualTo(Collections.emptyList());
+
 		config.addAllowedHeader("header1");
 		config.addAllowedHeader("header2");
-		assertEquals(Arrays.asList("header1"), config.checkHeaders(Arrays.asList("header1")));
-		assertEquals(Arrays.asList("header1", "header2"), config.checkHeaders(Arrays.asList("header1", "header2")));
-		assertEquals(Arrays.asList("header1", "header2"), config.checkHeaders(Arrays.asList("header1", "header2", "header3")));
+
+		assertThat(config.checkHeaders(Collections.singletonList("header1"))).containsExactly("header1");
+		assertThat(config.checkHeaders(Arrays.asList("header1", "header2"))).containsExactly("header1", "header2");
+		assertThat(config.checkHeaders(Arrays.asList("header1", "header2", "header3"))).containsExactly("header1", "header2");
 	}
 
 	@Test
-	public void checkHeadersNotAllowed() {
-		assertNull(config.checkHeaders(null));
-
-		assertNull(config.checkHeaders(Arrays.asList("header1")));
+	void checkHeadersNotAllowed() {
+		CorsConfiguration config = new CorsConfiguration();
+		assertThat(config.checkHeaders(null)).isNull();
+		assertThat(config.checkHeaders(Collections.singletonList("header1"))).isNull();
 
 		config.setAllowedHeaders(Collections.emptyList());
-		assertNull(config.checkHeaders(Arrays.asList("header1")));
+		assertThat(config.checkHeaders(Collections.singletonList("header1"))).isNull();
 
 		config.addAllowedHeader("header2");
 		config.addAllowedHeader("header3");
-		assertNull(config.checkHeaders(Arrays.asList("header1")));
+		assertThat(config.checkHeaders(Collections.singletonList("header1"))).isNull();
 	}
 
+	@Test  // SPR-15772
+	void changePermitDefaultValues() {
+		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
+		config.addAllowedOrigin("https://domain.com");
+		config.addAllowedHeader("header1");
+		config.addAllowedMethod("PATCH");
+
+		assertThat(config.getAllowedOrigins()).containsExactly("*", "https://domain.com");
+		assertThat(config.getAllowedHeaders()).containsExactly("*", "header1");
+		assertThat(config.getAllowedMethods()).containsExactly("GET", "HEAD", "POST", "PATCH");
+	}
+
+	@Test
+	void permitDefaultDoesntSetOriginWhenPatternPresent() {
+		CorsConfiguration config = new CorsConfiguration();
+		config.addAllowedOriginPattern("http://*.com");
+		config = config.applyPermitDefaultValues();
+
+		assertThat(config.getAllowedOrigins()).isNull();
+		assertThat(config.getAllowedOriginPatterns()).containsExactly("http://*.com");
+	}
 }
